ENG-3838 [read-replica] RF field out of bounds - fixed
Summary: Fix RF control overlapping on RR page fix

Test Plan: Open replica form, check replication factor layout's responsive behavior

Reviewers: bogdan, bharat

Reviewed By: bharat

Subscribers: karthik, ui, jenkins-bot

Differential Revision: https://phabricator.dev.yugabyte.com/D5418

--- a/managed/ui/src/app/stylesheets/buttons.scss
+++ b/managed/ui/src/app/stylesheets/buttons.scss
@@ -375,9 +375,6 @@
 }
 
 .button-group-row {
-  @media (min-width:1200px) {
-    margin-left: -15px;
-  }
   .btn-group {
     display: flex;
   }
